@@ -2,26 +2,20 @@ package br.com.hc.resource;
 
 import br.com.hc.dao.AgendamentosDao;
 import br.com.hc.dao.PacienteDao;
-import br.com.hc.dto.CadastroAgendamentosDto;
+import br.com.hc.dto.CadastroAgendamentoDto;
 import br.com.hc.dto.DetalhesAgendamentosDto;
 import br.com.hc.exception.EntidadeNaoEncontradaException;
-import br.com.hc.model.agendamento.AgendamentoOnline;
-import br.com.hc.model.agendamento.AgendamentoPresencial;
-import br.com.hc.model.agendamento.Agendamentos;
-import br.com.hc.model.agendamento.Exame;
+import br.com.hc.model.agendamento.*;
 import br.com.hc.model.paciente.Paciente;
 import jakarta.inject.Inject;
 import jakarta.validation.Valid;
 import jakarta.ws.rs.*;
-import jakarta.ws.rs.core.Context;
-import jakarta.ws.rs.core.MediaType;
-import jakarta.ws.rs.core.Response;
-import jakarta.ws.rs.core.UriInfo;
+import jakarta.ws.rs.core.*;
+import org.modelmapper.ModelMapper;
 
 import java.net.URI;
 import java.sql.SQLException;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Path("/agendamentos")
 @Produces(MediaType.APPLICATION_JSON)
@@ -29,53 +23,51 @@ import java.util.stream.Collectors;
 public class AgendamentoResource {
 
     @Inject
-    AgendamentosDao agendamentosDao;
+    private AgendamentosDao agendamentosDao;
 
     @Inject
-    PacienteDao pacienteDao;
+    private PacienteDao pacienteDao;
 
-    // LISTAR TODOS (para admin, ou remover se não for necessário)
+    @Inject
+    private ModelMapper modelMapper;
+
+    // LISTAR TODOS
     @GET
     public List<DetalhesAgendamentosDto> listar() throws SQLException {
         return agendamentosDao.listar()
                 .stream()
-                .map(this::toDetalhesDto)
-                .collect(Collectors.toList());
+                .map(a -> modelMapper.map(a, DetalhesAgendamentosDto.class))
+                .toList();
     }
 
-    // LISTAR AGENDAMENTOS DO PACIENTE ESPECÍFICO
+    // LISTAR POR PACIENTE
     @GET
     @Path("/paciente/{pacienteId}")
     public List<DetalhesAgendamentosDto> listarPorPaciente(@PathParam("pacienteId") int pacienteId) throws SQLException {
-        // Valida se o paciente existe
         Paciente paciente = pacienteDao.buscar(pacienteId);
         if (paciente == null) {
             throw new NotFoundException("Paciente não encontrado");
         }
 
-        // Filtra os agendamentos no Java (ou pode criar um método no DAO se for muitos dados)
         return agendamentosDao.listar()
                 .stream()
                 .filter(ag -> ag.getPaciente().getId() == pacienteId)
-                .map(this::toDetalhesDto)
-                .collect(Collectors.toList());
+                .map(a -> modelMapper.map(a, DetalhesAgendamentosDto.class))
+                .toList();
     }
 
-    // BUSCAR AGENDAMENTO ESPECÍFICO (qualquer um pode buscar, desde que exista)
+    // BUSCAR POR ID
     @GET
     @Path("/{id}")
-    public Response buscar(@PathParam("id") int id) throws SQLException {
-        try {
-            Agendamentos agendamento = agendamentosDao.buscar(id);
-            return Response.ok(toDetalhesDto(agendamento)).build();
-        } catch (EntidadeNaoEncontradaException e) {
-            throw new NotFoundException(e.getMessage());
-        }
+    public Response buscar(@PathParam("id") int id) throws SQLException, EntidadeNaoEncontradaException {
+        Agendamentos agendamento = agendamentosDao.buscar(id);
+        DetalhesAgendamentosDto dto = modelMapper.map(agendamento, DetalhesAgendamentosDto.class);
+        return Response.ok(dto).build();
     }
 
-    // CADASTRAR - o pacienteId vem do front-end (do AuthContext)
+    // CRIAR
     @POST
-    public Response adicionar(@Valid CadastroAgendamentoDto dto, @Context UriInfo uriInfo) throws SQLException {
+    public Response cadastrar(@Valid CadastroAgendamentoDto dto, @Context UriInfo uriInfo) throws SQLException {
         Agendamentos agendamento = fromDto(dto);
         agendamentosDao.cadastrar(agendamento);
 
@@ -84,95 +76,53 @@ public class AgendamentoResource {
                 .build();
 
         return Response.created(uri)
-                .entity(toDetalhesDto(agendamento))
+                .entity(modelMapper.map(agendamento, DetalhesAgendamentosDto.class))
                 .build();
     }
 
-    // ATUALIZAR - o pacienteId vem do front-end
+    // ATUALIZAR
     @PUT
     @Path("/{id}")
-    public Response atualizar(@PathParam("id") int id, @Valid CadastroAgendamentoDto dto) throws SQLException {
-        try {
-            Agendamentos agendamento = fromDto(dto);
-            agendamento.setId(id);
-            agendamentosDao.atualizar(agendamento);
-            return Response.ok().build();
-        } catch (EntidadeNaoEncontradaException e) {
-            throw new NotFoundException(e.getMessage());
-        }
+    public Response atualizar(@PathParam("id") int id, @Valid CadastroAgendamentoDto dto)
+            throws SQLException, EntidadeNaoEncontradaException {
+        Agendamentos agendamento = fromDto(dto);
+        agendamento.setId(id);
+        agendamentosDao.atualizar(agendamento);
+        return Response.ok().build();
     }
 
     // DELETAR
     @DELETE
     @Path("/{id}")
-    public Response deletar(@PathParam("id") int id) throws SQLException {
-        try {
-            agendamentosDao.deletar(id);
-            return Response.noContent().build();
-        } catch (EntidadeNaoEncontradaException e) {
-            throw new NotFoundException(e.getMessage());
-        }
+    public Response deletar(@PathParam("id") int id) throws SQLException, EntidadeNaoEncontradaException {
+        agendamentosDao.deletar(id);
+        return Response.noContent().build();
     }
 
-    // ... métodos fromDto e toDetalhesDto permanecem iguais
-}
+    // =====================================================
+    // Métodos auxiliares
+    // =====================================================
 
-    private Agendamentos fromDto(CadastroAgendamentosDto dto) throws SQLException {
+    private Agendamentos fromDto(CadastroAgendamentoDto dto) throws SQLException {
         Paciente paciente = pacienteDao.buscar(dto.getPacienteId());
         if (paciente == null) {
             throw new NotFoundException("Paciente não encontrado");
         }
 
         Agendamentos agendamento;
+
+        // O ModelMapper agora já entende os campos específicos por tipo
         switch (dto.getTipo().toUpperCase()) {
-            case "ONLINE":
-                AgendamentoOnline online = new AgendamentoOnline();
-                online.setLinkReuniao(dto.getLink());
-                agendamento = online;
-                break;
-            case "PRESENCIAL":
-                AgendamentoPresencial presencial = new AgendamentoPresencial();
-                presencial.setEndereco(dto.getEndereco());
-                agendamento = presencial;
-                break;
-            case "EXAME":
-                Exame exame = new Exame();
-                exame.setTipo(dto.getTipoExame());
-                exame.setResultado(dto.getResultadoExame());
-                agendamento = exame;
-                break;
-            default:
-                throw new IllegalArgumentException("Tipo de agendamento inválido: " + dto.getTipo());
+            case "ONLINE" -> agendamento = modelMapper.map(dto, AgendamentoOnline.class);
+            case "PRESENCIAL" -> agendamento = modelMapper.map(dto, AgendamentoPresencial.class);
+            case "EXAME" -> agendamento = modelMapper.map(dto, Exame.class);
+            default -> throw new IllegalArgumentException("Tipo de agendamento inválido: " + dto.getTipo());
         }
 
+        // Campos comuns
         agendamento.setPaciente(paciente);
-        agendamento.setDataHora(dto.getDataHora());
-        agendamento.setNomeConsulta(dto.getNomeConsulta());
-        agendamento.setNomeProfissional(dto.getNomeProfissional());
-        agendamento.setMedico(dto.getMedico());
-
         return agendamento;
     }
 
-    private DetalhesAgendamentosDto toDetalhesDto(Agendamentos agendamento) {
-        DetalhesAgendamentosDto dto = new DetalhesAgendamentosDto();
-        dto.setId(agendamento.getId());
-        dto.setTipo(agendamento.getClass().getSimpleName().toUpperCase());
-        dto.setPacienteId(agendamento.getPaciente().getId());
-        dto.setDataHora(agendamento.getDataHora());
-        dto.setNomeConsulta(agendamento.getNomeConsulta());
-        dto.setNomeProfissional(agendamento.getNomeProfissional());
-        dto.setMedico(agendamento.getMedico());
 
-        if (agendamento instanceof AgendamentoOnline) {
-            dto.setLink(((AgendamentoOnline) agendamento).getLinkReuniao());
-        } else if (agendamento instanceof AgendamentoPresencial) {
-            dto.setEndereco(((AgendamentoPresencial) agendamento).getEndereco());
-        } else if (agendamento instanceof Exame) {
-            dto.setTipoExame(((Exame) agendamento).getTipo());
-            dto.setResultadoExame(((Exame) agendamento).getResultado());
-        }
-
-        return dto;
-    }
 }
